# tasman-dbt-mta

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  dbt_project.yml  pyproject.toml  readme.md  run_test.sh
.github/: CODEOWNERS  ci-check.yml
.github/workflows/: ci-check.yml
config_templates/: attribution_rules.csv  attribution_windows.csv  conversion_rules.csv  conversion_shares.csv  touch_rules.csv
docs/: configuration.md  implementation_guide.md  todo_list.md
integration_tests/: .sqlfluff  .sqlfluffignore  Makefile  dbt_project.yml  packages.yml  profiles.yml  pyproject.toml
integration_tests/data/: attribution_rules.csv  attribution_windows.csv  conversion_shares.csv
macros/: current_utc_time.sql  generate_surrogate_key.sql  generate_uuid.sql  get_warehouse.sql  get_where_subquery.sql  test_greater_than_zero.sql  test_in_past.sql
models/: int_tasman_mta__attributed_conversions.sql  int_tasman_mta__attributed_events.sql  int_tasman_mta__attributed_touches.sql  int_tasman_mta__filtered_conversion_events.sql  int_tasman_mta__filtered_touch_events.sql  int_tasman_mta__matched_conversion_events.sql  int_tasman_mta__matched_touch_events.sql  prs_tasman_mta__attribution_performance_history.sql  schema.yml  tasman_mta__attributed_conversions.sql  tasman_mta__attributed_touches.sql  tasman_mta__filtered_conversion_events.sql  tasman_mta__filtered_touch_events.sql  tasman_mta__performance_history.sql
seeds/: attribution_models.csv  attribution_rules.csv  conversion_rules.csv  conversion_shares.csv  touch_rules.csv
(+15 files in other folders)
