# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[project]
name = "tasman_dbt_mta_integration_tests"
version = "1.1.0"
description = "Integration tests for Tasman dbt MTA Engine"
authors = [
    {name = "Tasman Analytics"},
]
requires-python = ">=3.10"
readme = "README.md"

[dependency-groups]
dbt = [
    "dbt-snowflake>=1.5.0,<1.6.0",
    "dbt-bigquery>=1.5.0,<1.6.0",
]
dev = [
    "sqlfluff>=2.3.0,<3",
    "sqlfluff-templater-dbt>=2.3.0,<3",
]

[tool.uv]
default-groups = [
    "dbt",
    "dev",
]
package = false

[tool.uv.build-backend]
namespace = true
